--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "babel-polyfill": "^6.26.0",
     "css-loader": "^5.2.4",
     "file-loader": "^6.2.0",
+    "google-protobuf": "*",
+    "grpc-web": "^1.2.1",
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
