setup toolbar layout (mostly)

--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
     "babel-polyfill": "^6.26.0",
+    "bootstrap": "^5.0.0",
     "css-loader": "^5.2.4",
     "file-loader": "^6.2.0",
     "google-protobuf": "*",
     "grpc-web": "^1.2.1",
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
+    "reactstrap": "^8.9.0",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.37.0",
