--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "google-protobuf": "*",
     "grpc-web": "^1.2.1",
     "leaflet": "^1.7.1",
+    "leaflet-easybutton": "^2.4.0",
     "react": "^17.0.2",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
